# play_ROS_with_nucleo_f429zi

./: .gitignore  README.md
control_client_freertos/: .mxproject  CMakeLists.txt  Makefile  STM32F429ZITx_SRAM.ld  control_client_freertos.ioc  device.cmake  toolchain.cmake
control_client_freertos/Inc/: mx_export.h  stm32f4xx_it.h  tim.h
control_client_freertos/Src/: gpio.c  i2c.c  main.c  main.cc  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
control_client_freertos/hal/: encoder.hpp  i2c.hpp  pwm.hpp  quaternion.hpp  uart_dma.hpp  utility.hpp
control_client_freertos/module/: motor.hpp  mpu6050.hpp  pid.hpp
control_client_freertos/sensor/: mpu6050.hpp
control_server/: CMakeLists.txt  main.cc  pwm_ctrl.cc  twist_ctrl.cc
i2c/: CMakeLists.txt  device.cmake  main.cpp  toolchain.cmake
i2c/hal/: utility.hpp
i2c/sensor/: mpu6050.hpp
rosserial_client/: CMakeLists.txt  main.cpp
rosserial_client/hal/: uart_dma.hpp
rosserial_client/ros/: ros.h
rosserial_client/src/: main.c  maincpp.cpp
shared/msg/: Makefile  encoder.pb.c  encoder.pb.h  encoder.proto  msg_def.h
shared/pigeon/: pigeon.h
uart_dma/: CMakeLists.txt  libcube.cmake  main.cpp
uart_dma/hal/: uart_dma.hpp
uart_dma/inc/: main.h  stm32f4xx_it.h  uart_dma.hpp
uart_dma/src/: main.c  maincpp.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
